[tool.poetry]
name = "predator-pray"
version = "0.1.0"
description = ""
authors = ["filip.stal <filip.johan.stal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
